fix height bug when window is too small vertically (or landscape mode on mobile)

--- a/src/pages/landing/landing.scss
+++ b/src/pages/landing/landing.scss
@@ -19,7 +19,7 @@ a.ManualLink {
 /////
 
 .Hello {
-    height: 100vh;
+    min-height: 100vh;
     padding-top: var(--nav-height);
     display: flex;
     
